Added form validation form email

--- a/src/components/Login/LoginForm.css
+++ b/src/components/Login/LoginForm.css
@@ -21,16 +21,14 @@ body {
   height: 100px;
 }
 .InputField {
-  width: 90%;
+  width: 100%;
 }
 input:focus,
 textarea:focus,
 select:focus {
   outline: none;
 }
-.InputIncorrect {
-  color: #d11e1e;
-}
+
 
 .BtnCont {
   width: 90%;
@@ -53,4 +51,19 @@ select:focus {
 .SocialIcon {
   width: 40px;
   display: inline;
+}
+
+
+
+.InputCorrect {
+  background: #ddffe0;
+}
+.InputIncorrect {
+  background: #ffdede;
+}
+.InputStatic{
+  background: #ffffff;
+}
+.InputNull{
+
 }
