--- a/src/components/ContactCard/ContactCard.css
+++ b/src/components/ContactCard/ContactCard.css
@@ -3,9 +3,9 @@
   color: #e7e7e7;
 }
 .profileImg {
-  padding-left: 10px;
+  padding: 10px;
   position: relative;
-  width: 70%;
+  width: 60%;
   margin: auto;
   border-radius: 100%;
 }
@@ -16,4 +16,11 @@
 }
 .center {
   text-align: center;
+}
+.containerCard
+{
+    border: 0.5px solid rgb(68, 68, 68);
+}
+.containerCard:hover{
+    background: #424242;
 }
